Projet_GL/src/test/deca/context/invalid/unprovided/testObjet/methods/undefMethodCall.deca
// Description:
//    Appel d'une méthode inexistante dans la classe
//
// Resultat: Ligne 20
//    ContextualError : Method 'gtX' is unknown to class A
//
// Historique:
//    Créé le 24/01/2018

class A{
      int x;

      int getX(){
      	  return x;
      }
}

{
        A a = new A();
	println(a.gtX()); // Une faute de frappe?
}
		